# IterativeStatistics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  main.cpp
documentation/: iterative_statistics_draft.tex
source/: MultivariateSample.cpp  MultivariateSample.hpp  UnivariateSample.cpp  UnivariateSample.hpp
tests/: CMakeLists.txt  Constants.hpp  MultivariateSampleTests.cpp  UnivariateSampleTests.cpp
